# transformer_model

./: main.py  pyproject.toml
transformer/: __main__.py  layer_norm.py  mask.py  positional_encoding.py  positionwise_feed_forward.py  residual_connection.py  self_attention.py  sublayer_connection.py  transformer.py
transformer/attention/: __init__.py  attention.py  cross_attention.py  multi_head_attention.py  self_attention.py  utils.py
transformer/decoder/: __init__.py  decoder.py  decoder_layer.py
transformer/embedding/: __init__.py  embeddings.py  positional_encoding.py  source_embedding.py  target_embedding.py
transformer/encoder/: __init__.py  encoder.py  encoder_layer.py
